Reduces memory usage in the JOGL 2.0 renderer