@@ -36,7 +36,7 @@ public class JoglRenderFont implements RenderFont {
             return null;
         }
         else {
-            return new Integer((int) (currentCharacterInfo.getXadvance() * size + getKerning(
+            return Integer.valueOf((int) (currentCharacterInfo.getXadvance() * size + getKerning(
                     currentCharacterInfo, nextCharacter)));
         }
     }
